[package]
name = "rustand"
version = "0.1.0"
edition = "2024"
description = "A lightweight, Zustand-inspired state management library for Rust."
license = "MIT"
keywords = ["state", "management", "zustand", "store", "reactive"]
categories = ["concurrency", "rust-patterns", "wasm"]
repository = "https://github.com/nikarm22/rustand"
readme = "README.md"
documentation = "https://docs.rs/rustand"
homepage = "https://github.com/nikarm22/rustand"

[workspace]
members = ["rustand-macros", "fuzz"]

[dependencies]
rustand-macros = { path = "rustand-macros", version = "0.1.0" }

[features]
default = ["single-threaded"]
single-threaded = []
wasm = ["single-threaded"]
