[package]
name = "rustand"
version = "0.1.0"
edition = "2024"
description = "A lightweight, Zustand-inspired state management library for Rust."
license = "MIT"
keywords = ["state", "zustand", "store"]
categories = ["wasm", "front-end"]
repository = "https://github.com/nikarm22/rustand"
readme = "README.md"
documentation = "https://docs.rs/rustand"
homepage = "https://github.com/nikarm22/rustand"

[workspace]
members = ["rustand-macros", "fuzz"]

[dependencies]
rustand-macros = { path = "rustand-macros", version = "0.1.0", optional = true }

[[example]]
name = "global_store"
required-features = ["macros"]

[features]
default = ["single-threaded", "macros"]
single-threaded = []
wasm = ["single-threaded"]
macros = ["dep:rustand-macros"]
