[package]
name = "rustand-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }
futures-lite = "2"

[dependencies.rustand]
path = ".."
default-features = false

[features]
# These are meant to be enabled one at a time via --features
multi-threaded = ["rustand/multi-threaded"]
single-threaded = ["rustand/single-threaded"]
tokio = ["rustand/tokio"]
async-std = ["rustand/async-std"]

[[bin]]
name = "multi_threaded"
path = "fuzz_targets/multi_threaded.rs"
test = false
doc = false
bench = false

[[bin]]
name = "single_threaded"
path = "fuzz_targets/single_threaded.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tokio"
path = "fuzz_targets/tokio.rs"
test = false
doc = false
bench = false

[[bin]]
name = "async_std"
path = "fuzz_targets/async_std.rs"
test = false
doc = false
bench = false
