[package]
name = "rustand-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4", features = ["derive"] }

[dependencies.rustand]
path = ".."

[[bin]]
name = "single_threaded"
path = "fuzz_targets/single_threaded.rs"
test = false
doc = false
