[package]
name = "rustand-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the rustand state management library."
license = "MIT"
repository = "https://github.com/nikarm22/rustand"
documentation = "https://docs.rs/rustand"
homepage = "https://github.com/nikarm22/rustand"
readme = "../README.md"
keywords = ["rustand", "proc-macro"]
categories = ["state"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
